# DEAD_PROJECTS

Acinator/: CMakeLists.txt
GraphViz/: CMakeLists.txt  KLibGraphV.cpp  KLibGraphV.h
KList/: CMakeLists.txt  KList.cpp  KList.h  KList_impl.h  main.cpp
Onegin/: CMakeLists.txt  MyLibString.cpp  MyLibString.h  Onegin.txt  main.c  main.cpp  onegin_func.cpp  onegin_func.h  output_file
Onegin/Files/: output_file.txt
Square_equation_server/: CMakeLists.txt  main.cpp
Squre_equation/: CMakeLists.txt  equation.cpp  equation.h  func.cpp  func.h  main.cpp  unit_test.cpp  values.txt
Stack/: CMakeLists.txt  LibStack.cpp  LibStack.h  SkekLogFile.txt  main.cpp
TOTAL_CPU/CPU/: CMakeLists.txt  LibProc.cpp  LibProc.h  main.cpp
TOTAL_CPU/LibKalikHelp/: CMakeLists.txt  libHelpKalik.cpp  libHelpKalik.h
TOTAL_CPU/OWN_FILES/: ASMLogFile.txt  CPU  Disassm.txt  assembler  bin_file.txt  disassembler  prog.txt
TOTAL_CPU/OWN_FILES/ASM_FILES/: SkekLogFile.txt
TOTAL_CPU/OWN_FILES/CPU_FILES/: CPULogFile.txt  GraphVizDump  SkekLogFile.txt
TOTAL_CPU/OWN_FILES/FILES/: Disassm.txt  circle
TOTAL_CPU/assembler/: Assembler.cpp  Assembler.h  CMakeLists.txt  main.cpp
TOTAL_CPU/disassembler/: CMakeLists.txt  Disassembler.cpp  Disassembler.h  main.cpp
assembler/: Assembler.cpp  Assembler.h  CMakeLists.txt  main.cpp
dif/: CMakeLists.txt
dif/DF_Headers/: DF_define_operation.h  KDump.h  KLexer.h  KTree.h  Oper_Name.h
dif/DF_Source/: KDump.cpp  KLexer.cpp  KTree.cpp
untitled/: main.cpp
untitled1/: New_Onegin.txt  Onegin.txt  main.cpp
